--- a/src/app/app.html
+++ b/src/app/app.html
@@ -266,7 +266,7 @@
       } @else {
         <div>
           <div class="order-details"> 
-            Order: {{}}
+            Order: {{selectedPizza?.name}}
           </div>
         </div>
       }
