--- a/src/app/app.html
+++ b/src/app/app.html
@@ -275,6 +275,7 @@
           <div class="order-details">
             Order: {{selectedPizza?.name}}
           </div>
+          <button (click)="cancelSelection()">cancel</button>
         </div>
       }
     </div>
